# taste-distillation

./: .gitignore  CLAUDE.md  DSPY_TUTORIAL.md  EVALUATION_REPORT.md  Plan.md  README.md  pyproject.toml
docs/: EVALUATION_REPORT.md  Plan.md  Taste Distillation.md  experimental_plan.md  favorite.md  openai-finetuning-approach.md
lib/: taste_rubric.py
lib/hackernew/: hn_scraper.py  prepare.py
lib/hn_scraper/: prepare.py
lib/reader/: base.py  favorite.py  prepare.py  shortlist.py
notebooks/: favorite.ipynb  notebook.ipynb  openai.ipynb  report.ipynb
results/: evaluation_results_dspy_20250703_144207.json  evaluation_results_dspy_20250703_144841.json
saved/models/: dspy_favorite_001.json  dspy_favorite_001_metadata.json  dspy_pairwise_001.json  dspy_pairwise_001_metadata.json  dspy_pairwise_002.json  dspy_pairwise_002_metadata.json  dspy_pairwise_003.json  dspy_pairwise_003_metadata.json  dspy_pairwise_004.json  dspy_pairwise_004_metadata.json
saved/rubrics/: personal_taste_rubric.txt
scripts/: generate_rubric.py  prepare.py
scripts/favorite_classifier/: evaluate.py  prepare.py  train.py
scripts/pairwise_classifier/: evaluate.py  prepare.py  train.py
src/dspy_favorite/: dspy_favorite.py
src/dspy_pairwise/: dspy_pairwise.py
src/favorite_classifier/: README.md  analyze_data.py  data_loader.py  final_summary.py  model_inspector.py
src/hn_scraper/: HACKER_NEWS_GUIDE.md  direct_test.py  hn_balanced_dataset_3dm4r.csv  hn_scraper.py  test_scraper.py
src/pairwise_classifier/: README.md  pairwise_classifier.py  pairwise_data_loader.py
(+17 files in other folders)
