[project]
name = "favorite-classifier"
version = "0.1.0"
description = ""
authors = [
    {name = "Edmar Ferreira",email = "edmaroferreira@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "dspy (>=2.6.24,<3.0.0)",
    "openai (>=1.86.0,<2.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "requests (>=2.32.0,<3.0.0)",
    "beautifulsoup4 (>=4.12.0,<5.0.0)",
    "lxml (>=5.3.0,<6.0.0)",
    "tqdm (>=4.67.0,<5.0.0)",
    "playwright (>=1.49.0,<2.0.0)",
    "aiohttp (>=3.8.0,<4.0.0)",
    "pyyaml (>=6.0.0,<7.0.0)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/in_context_taste_models"]

[tool.uv]
dev-dependencies = []
